@@ -1,5 +1,8 @@
 2001-01-09  Timothy Jenness  <t.jenness@jach.hawaii.edu>
 
+	* Inst/Defn.pm (orac_engine_description): Add function to support 
+	ORAC::Msg::EngineLaunch.
+
 	* Msg/EngineLaunch.pm: Create 
 
 2001-01-09  Tim Jenness  <timj@jach.hawaii.edu>
